[FEAT]backend: add somes history
